<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="locale">en</string>
    <string name="app_name">F3Ftimer</string>
    <string name="app_uuid" translatable="false">9ab9ee24-331c-44d9-ae73-23e0befc9e57</string>
    <string name="external_display_uuid" translatable="false">cbedac48-833c-4f3e-b69a-834e9e61d0c9</string>
    <string name="HC05_uuid" translatable="false">"00001101-0000-1000-8000-00805F9B34FB"</string>
    <string name="version">Version</string>
    <string name="credits">An open source project by Mark Treble (modified by Stephan Herrig)</string>
    <string name="repositary" translatable="false" >https://www.github.com/marktreble/f3f-timer</string>
    <string name="help">Help is not implemented yet</string>
    <string name="menu_settings">Settings</string>
    <string name="app_pilots">Pilot Manager</string>
    <string name="app_race">Race Manager</string>
    <string name="pilot_firstname">First Name</string>
    <string name="pilot_surname">Surname</string>
    <string name="pilot_email">Email Address</string>
    <string name="pilot_frequency">Frequency</string>
    <string name="pilot_models">Models</string>
    <string name="pilot_nationality">Nationality</string>
    <string name="pilot_language">Language</string>
    <string name="race_name">Race Name</string>
    <string name="race_type">Race Type</string>
    <string name="race_offset">Flying Order Offset</string>
    <string name="race_rounds_per_flight">Rounds per Flight</string>
    <string name="race_race">Race</string>
    <string name="race_round">Round</string>
    <string name="race_practice">Practice</string>
    <string name="button_save">Save</string>
    <string name="button_add" translatable="false">+</string>
    <string name="button_next">Next</string>
    <string name="button_done">Done</string>
    <string name="button_scramble">S</string>
    <string name="button_rotate">R</string>
    <string name="button_manual">M</string>
    <string name="button_up">^</string>
    <string name="button_down">v</string>
    <string name="button_next_pilot">Next Pilot</string>
    <string name="empty" translatable="false"></string>
    <string name="retired">Ret</string>
    <string name="reflight">RF</string>
    <string name="notime" translatable="false">--.--</string>
    <string name="thirty" translatable="false">30.00</string>
    <string name="start_working_time">Start Working Time</string>
    <string name="working_time_started">Working Time Started</string>
    <string name="late_entry">Late Entry</string>
    <string name="model_launched">Model Launched</string>
    <string name="model_launch">Model Launch</string>
    <string name="abort">Abort</string>
    <string name="resume">Resume</string>
    <string name="ignore">Ignore</string>
    <string name="scrub_round">Scrub Round</string>
    <string name="scrub_group">Scrub Group</string>
    <string name="minutes_remaining">Minutes Remaining</string>
    <string name="zero" translatable="false">0.00</string>
    <string name="off_course">Off Course</string>
    <string name="on_course">On Course</string>
    <string name="working_time">Working Time</string>
    <string name="and_last">And Last</string>
    <string name="finish_race">Finish Race</string>
    <string name="next_round">End Round</string>
    <string name="penalty">P</string>
    <string name="app_results">Results Manager</string>
    <string name="refly">Refly?</string>
    <string name="finish">Finish</string>
    <string name="score_zero">Score zero</string>
    <string name="space" translatable="false"> </string>
    <string name="menu_new_race">New Race</string>
    <string name="menu_import_race">Import Race</string>
    <string name="menu_export_race">Export Race</string>
    <string name="select_import_source">Import Race</string>
    <string name="select_export_destination">Export Race</string>
    <string name="select_export_results_destination">Export Results</string>
    <string name="select_share_results_destination">Share Leaderboard</string>
    <string name="menu_add_pilots">Add Pilots</string>
    <string name="menu_import_pilots">Import Pilots</string>
    <string name="menu_export_pilots">Export Pilots</string>
    <string name="menu_next_round">Finish Round</string>
    <string name="menu_add_pilot">New Pilot</string>
    <string name="menu_group_score">Group Score</string>
    <string name="menu_change_flying_order">Change Flying Order</string>
    <string name="menu_change_start_number">Change Start Number</string>
    <string name="menu_scrub_round">Scrub Round/Group</string>
    <string name="menu_scrub_round_confirm">Are you sure you want to scrub the round/group?</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>
    <string name="menu_export">Export</string>
    <string name="menu_show_round_timeout">Show Round Expiring Timer</string>
    <string name="enter_time">Enter Time</string>
    <string name="audio">Audio Options</string>
    <string name="USB_IOIO" translatable="false">USB - IOIO</string>
    <string name="USB_OTHER">USB - Other</string>
    <string name="BLUETOOTH_HC_05" translatable="false">Bluetooth - HC-05</string>
    <string name="TCP_IO">TCP/IP Socket - f3ftimer-server:1234</string>
    <string name="Demo">Demo Mode - On Screen Buzzers</string>
    <string name="input_tcpio_ip">IP / host name for \"f3ftimer-server\"</string>
    <string name="bluetooth_paired_device">HC-05 Paired Device</string>
    <string name="external_results_http">External Results (HTTP)</string>
    <string name="external_results_BT">External Results (Bluetooth)</string>
    <string name="connection_settings">Connection Settings</string>
    <string name="other_settings">Other Settings</string>
    <string name="usb_baudrate">Baud Rate</string>
    <string name="usb_stopbits">Stop Bits</string>
    <string name="usb_databits">Data Bits</string>
    <string name="usb_parity">Parity</string>
    <string name="soft_buzz">Software Buzzer</string>
    <string name="none">None</string>
    <string name="enter_num_groups">Enter Number of Groups</string>
    <string name="enter_start_number">Enter Start Number</string>
    <string name="enter_rotate_offset">Enter number of shifted positions</string>
    <string name="wifi">Wifi Buzzers</string>
    <string name="pref_enable_acra">Enable ACRA Crash Reports</string>
    <string name="pref_acra_enabled">Enabled</string>
    <string name="pref_acra_disabled">Disabled</string>
    <string name="en">English</string>
    <string name="fr">French</string>
    <string name="de">German</string>
    <string name="nl">Dutch</string>
    <string name="es">Spanish</string>

    <!-- Wind Measurement -->
    <string name="wind_meter_settings">Wind Meter Settings</string>
    <string name="wind_warning">Wind Illegal</string>
    <string name="wind_angle_offset">Slope Orientation in degrees</string>
    <string name="wind_measurement">Wind Measurement</string>
    <string name="wind_warning_audible">Wind Warning Audible</string>

    <!-- Soft Buzzers -->
    <string name="A" translatable="false">A</string>
    <string name="B" translatable="false">B</string>
    <string name="end_of_round">End of Round</string>
    <string name="run_complete">Run Complete</string>
    <string name="pilot_team">Team Name</string>

    <!-- API -->
    <string name="source_url">Source (URL)</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btn_login">Log In</string>
    <string name="USBJE">USB - Jon Edison Timer Box</string>

    <!-- Sounds -->
    <string name="whistle">whistle</string>
    <string name="whistle_lastturn">whistle_lastturn</string>
    <string name="beep">beep</string>
    <string name="buzz">buzz</string>
    <string name="intercom_beep">intercom_beep</string>

    <!-- Sound Settings -->
    <string name="snd_off_course">Off Course</string>
    <string name="snd_on_course">On Course</string>
    <string name="snd_turn">Turn</string>
    <string name="snd_turn9">Last Turn</string>
    <string name="snd_penalty">Penalty</string>
    <string name="snd_working_time_started">Working Time Started</string>
    <string name="snd_pilot_id">Number</string>

    <string name="next_pilot">Next Pilot</string>
    <string name="menu_finish_race">Finish Race</string>

</resources>
