<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:background="@android:color/transparent"
			  android:orientation="vertical"
	>

	<LinearLayout
		android:id="@+id/minimised"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:visibility="gone">

		<TextView
			android:id="@+id/minnumber"
			android:layout_width="24dp"
			android:layout_height="24dp"
			android:layout_gravity="center"
			android:layout_marginRight="8dp"
			android:layout_weight="0"
			android:background="@drawable/circle"
			android:gravity="center"
			android:minHeight="68dp"
			android:textColor="@color/text2"
			android:textSize="16sp"
			android:textStyle="bold">

		</TextView>

		<TextView
			android:id="@+id/minpilot"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_gravity="center_horizontal"
			android:layout_weight="1"
			android:text="@string/thirty"
			android:textColor="@color/text3"
			android:textSize="10sp"
			/>

		<TextView
			android:id="@+id/mintime"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_gravity="center_horizontal"
			android:layout_weight="1"
			android:text="@string/thirty"
			android:textColor="@color/text3"
			android:textSize="20sp"
			/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/full"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="10dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingTop="10dp">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/number"
				android:layout_width="@dimen/_20sdp"
				android:layout_height="@dimen/_20sdp"
				android:layout_gravity="center"
				android:layout_marginRight="8dp"
				android:layout_weight="0"
				android:background="@drawable/circle"
				android:gravity="center"
				android:minHeight="@dimen/_20sdp"
				android:textColor="@color/text2"
				android:textSize="@dimen/_8ssp"
				android:textStyle="bold">

			</TextView>

			<TextView
				android:id="@+id/current_pilot"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:text="@string/empty"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="@color/text3"
				android:textSize="@dimen/_10ssp">
			</TextView>
		</LinearLayout>

		<TextView
			android:id="@+id/time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/thirty"
			android:textColor="@color/text3"
			android:textSize="@dimen/_30ssp"
			>

		</TextView>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/lap"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="left"
				android:layout_weight="1"
				android:text="@string/empty"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="@color/text3"
				android:textSize="@dimen/_10ssp">

			</TextView>

			<TextView
				android:id="@+id/estimated"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="end"
				android:layout_weight="1"
				android:text="@string/empty"
				android:textAlignment="textEnd"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="@color/text3"
				android:textSize="@dimen/_10ssp">

			</TextView>

		</LinearLayout>

		<TextView
			android:id="@+id/status"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_weight="1"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/text3"
			android:textSize="@dimen/_10ssp">
		</TextView>

		<TextView
			android:id="@+id/wind_warning"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_weight="1"
			android:drawableLeft="@drawable/warning"
			android:text="@string/wind_warning"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/text_warning"
			android:textSize="@dimen/_8ssp"
			android:visibility="invisible"/>

		<LinearLayout
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/_4sdp"
			android:orientation="horizontal">

			<Button
				android:id="@+id/base_A"
				android:layout_width="@dimen/_30sdp"
				android:layout_height="@dimen/_30sdp"
				android:background="@drawable/soft_buzzer"
				android:text="@string/A"
				android:textColor="@color/text2"
				android:textSize="@dimen/_16ssp"
				android:visibility="gone"/>

			<Button
				android:id="@+id/button_start_working_time"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/_30sdp"
				android:layout_weight="1"
				android:text="@string/start_working_time"
				android:visibility="gone">

			</Button>

			<Button
				android:id="@+id/button_model_launched"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/_30sdp"
				android:layout_weight="1"
				android:text="@string/model_launch"
				android:visibility="gone">
			</Button>

			<Button
				android:id="@+id/button_abort"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/_30sdp"
				android:layout_weight="1"
				android:text="@string/abort"
				android:visibility="gone">
			</Button>

			<Button
				android:id="@+id/button_refly"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/_30sdp"
				android:layout_weight="1"
				android:text="@string/refly"
				android:visibility="gone"/>

			<Button
				android:id="@+id/button_finish"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/_30sdp"
				android:layout_weight="1"
				android:text="@string/finish"
				android:visibility="gone"/>

			<Button
				android:id="@+id/button_zero"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/_30sdp"
				android:layout_weight="1"
				android:text="@string/score_zero"
				android:visibility="gone"/>

			<Button
				android:id="@+id/base_B"
				android:layout_width="@dimen/_30sdp"
				android:layout_height="@dimen/_30sdp"
				android:background="@drawable/soft_buzzer"
				android:text="@string/B"
				android:textColor="@color/text2"
				android:textSize="@dimen/_16ssp"
				android:visibility="gone"/>

			<Button
				android:id="@+id/button_next_pilot"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/_30sdp"
				android:layout_weight="1"
				android:text="@string/button_next_pilot"
				android:visibility="gone"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
